# GMSE

./: .gitignore  README.org  makefile  pyproject.toml
.github/workflows/: run_tests.yml
src/: main.py
src/utility/: yaml_reader.py
test/: test_yaml_reader.py
test/extern_files/: test.yaml
uml/: overview.puml  yaml-interface.puml
